--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
             <td>{{ person.id }}</td>
             <td>{{ person.name }}</td>
             <td>{{ person.age }}</td>
+            <td><a href="edit/{{ person.id }}">Изменить</a> | <a href="delete/{{ person.id }}">Удалить</a></td>
         </tr>
         {% endfor %}
     </table>
